Add operations Results Options,Delete and update corresponding openapi
