# src/Controller/ApiResultsController.php
@@ -9,6 +9,7 @@ use App\Utility\Utils;
 use Doctrine\ORM\EntityManagerInterface;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Security;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
+use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
@@ -129,6 +130,90 @@ class ApiResultsController extends AbstractController
                 self::HEADER_ETAG=>md5(json_encode($result))
             ]
         );
+    }
+
+    /**
+     * Summary: Provides the list of HTTP supported methods
+     * Notes: Return a &#x60;Allow&#x60; header with a list of HTTP supported methods.
+     *
+     * @param  int $resultId Result id
+     * @return Response
+     * @Route(
+     *     path="/{resultId}.{_format}",
+     *     defaults={ "resultId" = 0, "_format": "json" },
+     *     requirements={
+     *          "resultId": "\d+",
+     *         "_format": "json|xml"
+     *     },
+     *     methods={ Request::METHOD_OPTIONS },
+     *     name="options"
+     * )
+     */
+    public function optionsAction(int $resultId): Response{
+        $methods =$resultId
+            ?[Request::METHOD_GET,Request::METHOD_PUT,Request::METHOD_DELETE]
+            :[Request::METHOD_GET,Request::METHOD_POST];
+        $methods[]= Request::METHOD_OPTIONS;
+
+        return new JsonResponse(
+          null,
+          Response::HTTP_NO_CONTENT,
+          [
+              self::HEADER_ALLOW=>implode(',',$methods),
+              self::HEADER_CACHE_CONTROL=>'public, unchangeable'
+          ]
+        );
+
+    }
+
+    /**
+     * DELETE Action
+     * Summary: Removes the Result resource.
+     * Notes: Deletes the result identified by &#x60;resultId&#x60;.
+     *
+     * @param   Request $request
+     * @param   int $resultId Result id
+     * @return  Response
+     * @Route(
+     *     path="/{resultId}.{_format}",
+     *     defaults={ "_format": null },
+     *     requirements={
+     *          "resultId": "\d+",
+     *         "_format": "json|xml"
+     *     },
+     *     methods={ Request::METHOD_DELETE },
+     *     name="delete"
+     * )
+     *
+     * @Security(
+     *     expression="is_granted('IS_AUTHENTICATED_FULLY')",
+     *     statusCode=401,
+     *     message="`Unauthorized`: Invalid credentials."
+     * )
+     */
+    public function deleteAction(Request $request,int $resultId):Response{
+
+        if(!$this->isGranted(self::ROLE_ADMIN)){
+            throw new HttpException(
+                Response::HTTP_FORBIDDEN,
+                'Forbidden: you don\'t have permission to access'
+            );
+        }
+        $format= Utils::getFormat($request);
+
+        $result=$this->entityManager
+            ->getRepository(Result::class)
+            ->findOneBy(['id'=>$resultId]);
+
+        if(null=== $result){
+            return $this->error404($format);
+        }
+
+        $this->entityManager->remove($result);
+        $this->entityManager->flush();
+
+        return Utils::apiResponse(Response::HTTP_NO_CONTENT);
+
     }
 
     /**
